<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_app_id">oXBUzU2b8IcKRVx5r2GS</string>
    <string name="parse_client_key">BG5i3UF7cHGkXsEVcY5f</string>

    <string name="app_name">FPCold-app</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_inbound">Inbound Activity</string>
    <string name="title_activity_in_out">In/Out Activity</string>
    <string name="title_activity_transfer">Transfer Activity</string>
    <string name="title_activity_inventory">Inventory Activity</string>
    <string name="title_activity_inventory_list">Inventory List</string>
    <string name="title_activity_settings">Settings Activity</string>

    <string-array name="tiers_array">
        <item>Tier</item>
        <item>1: Admin</item>
        <item>2: Worker</item>
    </string-array>

    <string-array name="filters_array">
        <item>Location</item>
        <item>Pallet Tag</item>
        <item>Date</item>
    </string-array>

    <string name="announcement_fragment_info">Send Announcement:</string>
    <string name="announcement_fragment_hint">Dear Wrokers...  max. 36 chars</string>

    <string name="reports_fragment_info">Share Report:</string>

    <string name="users_fragment_add_user">ADD USER</string>
    <string name="users_fragment_edit_user">EDIT USER</string>
    <string name="users_fragment_title">Action User</string>
    <string name="users_fragment_name">Name</string>
    <string name="users_fragment_passcode">4-digit Passcode</string>
    <string name="users_fragment_button">ACTION</string>
    <string-array name="users_add">
        <item>New User</item>
    </string-array>

</resources>
