<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"
                tools:context=".SettingsUsers">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usersSwitchLinearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/usersAddButton"
            android:layout_weight="1"
            android:text="@string/users_fragment_add_user"
            android:textColor="@color/colorMainText"
            android:background="@color/colorSecondary"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/usersEditButton"
            android:layout_weight="1"
            android:text="@string/users_fragment_edit_user"
            android:textColor="@color/colorMainText"
            android:background="@color/colorBackgroundLight"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usersInfoLinearLayout"
        android:layout_below="@id/usersSwitchLinearLayout"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usersInfoTopTextView"
            android:layout_marginTop="5sp"
            android:text="@string/users_fragment_title"
            android:textSize="23sp"
            android:textColor="@color/colorMainText"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editUserTopSpinner"
            android:layout_weight="1"
            android:layout_marginTop="10sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addUserNameTextView"
            android:layout_marginTop="10sp"
            android:hint="@string/users_fragment_name"
            android:singleLine="true"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorSecondaryDark"
            android:textColor="@color/colorSecondary"
            android:textColorHighlight="@color/colorSecondaryLight"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/addUserPasscodeTextView"
                android:layout_weight="1"
                android:hint="@string/users_fragment_passcode"
                android:singleLine="true"
                android:maxLines="1"
                android:maxLength="4"
                android:imeOptions="actionNext"
                android:textColorHint="@color/colorSecondaryDark"
                android:textColor="@color/colorSecondary"
                android:textColorHighlight="@color/colorSecondaryLight"/>

            <Spinner
                android:id="@+id/addUserTierSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/tiers_array" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/users_fragment_button"
            android:textColor="@color/colorMainText"
            android:background="@color/colorSecondary"/>

    </LinearLayout>
</RelativeLayout>